--- a/app/src/main/res/layout/activity_markup.xml
+++ b/app/src/main/res/layout/activity_markup.xml
@@ -15,10 +15,11 @@
         android:layout_height="90dp"
         android:layout_margin="0dp"
         android:gravity="center"
+        android:focusedByDefault="true"
         android:inputType="text|textMultiLine"
         android:textSize="16sp"
         android:hint="@string/press_Location"
-        android:importantForAutofill="no"
+        android:textCursorDrawable="@drawable/cursor_color"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/image"
         app:layout_constraintLeft_toLeftOf="parent"
