--- a/app/src/main/res/menu/photo_menu.xml
+++ b/app/src/main/res/menu/photo_menu.xml
@@ -58,4 +58,10 @@
         android:title="@string/type_restaurant"
         app:showAsAction="ifRoom" />
 
+    <item
+        android:id="@+id/typeFood"
+        android:orderInCategory="100"
+        android:title="@string/type_food"
+        app:showAsAction="ifRoom" />
+
 </menu>
