--- a/app/src/main/res/layout/activity_markup.xml
+++ b/app/src/main/res/layout/activity_markup.xml
@@ -8,6 +8,18 @@
     android:id="@+id/markupPlace"
     android:background="#aaaaaa">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/type_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:background="#fff"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/placeAddress"
+        />
+
     <EditText
         android:id="@+id/placeAddress"
         android:layout_width="0dp"
@@ -20,7 +32,7 @@
         android:textSize="16sp"
         android:hint="@string/press_Location"
         android:textCursorDrawable="@drawable/cursor_color"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/type_recycler"
         app:layout_constraintBottom_toTopOf="@id/image"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/getLocation"
@@ -42,7 +54,7 @@
         android:layout_margin="4dp"
         android:src="@drawable/icon_show_info"
         android:contentDescription="@string/photo"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/type_recycler"
         app:layout_constraintBottom_toTopOf="@id/getLocation"
         app:layout_constraintLeft_toRightOf="@id/placeAddress"
         app:layout_constraintRight_toRightOf="parent"
