--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
     <dimen name="design_fab_image_size" tools:override="true">44dp</dimen>
+    <dimen name="cat_size">24dp</dimen>
+    <dimen name="cat_margin">4dp</dimen>
 
 </resources>
