--- a/app/src/main/res/layout/type_item.xml
+++ b/app/src/main/res/layout/type_item.xml
@@ -13,7 +13,7 @@
         android:layout_height="24dp"
         android:background="#00000000"
         android:contentDescription="@string/todo"
-        android:src="@mipmap/place"
+        android:src="@mipmap/place_holder"
         android:layout_margin="@dimen/cat_margin" />
 
     <TextView
