--- a/app/src/main/res/drawable/back_border.xml
+++ b/app/src/main/res/drawable/back_border.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <solid android:color="#3300007F" />
-    <corners android:radius="16dp" />
-    <stroke android:width="4dp" android:color="#770000FF"/>
+    <solid android:color="@color/placeAddress" />
+    <corners android:radius="12dp" />
+    <stroke android:width="2dp" android:color="#770000FF"/>
 </shape>
