--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -125,7 +125,7 @@
         android:layout_margin="4dp"
         android:textSize="16sp"
         android:gravity="center"
-        android:text="@string/color_hex"
+        android:text="@string/color_hexa_value"
         app:layout_constraintTop_toBottomOf="@id/barAlpha"
         app:layout_constraintLeft_toRightOf="@id/colorWork"
         app:layout_constraintRight_toRightOf="parent"
