--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#6361bf</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#43419f</color>
     <color name="markInColor">#FFFFFF88</color>
     <color name="markOutColor">#AA333333</color>
     <color name="recycleView">#fccffc</color>
-    <color name="placeAddress">#00838F</color>
+    <color name="placeAddress">#3300003F</color>
     <color name="black">#FF000000</color>
     <color name="infoColor">#FFFFFC3B</color>
 
