--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="placeAddress">#3300003F</color>
     <color name="black">#FF000000</color>
     <color name="infoColor">#FFFFFC3B</color>
+    <color name="xorColor">#ccCAD8AA</color>
 
 </resources>
