--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="markOutColor">#AA333333</color>
     <color name="recycleView">#fccffc</color>
     <color name="placeAddress">#3300003F</color>
+    <color name="arrow">#330606BA</color>
     <color name="black">#FF000000</color>
     <color name="infoColor">#FFFFFC3B</color>
     <color name="xorColor">#ccCAD8AA</color>
