--- a/app/src/main/res/layout/activity_markup.xml
+++ b/app/src/main/res/layout/activity_markup.xml
@@ -93,6 +93,18 @@
         />
 
     <ImageView
+        android:id="@+id/add_mark"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="48dp"
+        android:src="@mipmap/add_mark"
+        android:contentDescription="@string/photo"
+        app:layout_constraintTop_toBottomOf="@id/getLocation"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/placeAddress"
+        />
+
+    <ImageView
         android:id="@+id/imageL"
         android:layout_width="100dp"
         android:layout_height="100dp"
