--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,10 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:theme="@style/PreferenceScreen"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <FrameLayout
         android:id="@+id/settings"
+        android:background="#96B697"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
