--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -18,31 +18,17 @@
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/action_TwoThree"
-        android:orderInCategory="100"
-        android:title="@string/delete"
-        android:icon="@drawable/icon_show_three"
-        app:showAsAction="always" />
-
-    <item
         android:id="@+id/action_Delete"
         android:orderInCategory="100"
         android:title="@string/delete"
         android:icon="@drawable/icon_delete"
         app:showAsAction="always" />
 
-    <item
-        android:id="@+id/action_MarkUpMulti"
-        android:orderInCategory="100"
-        android:title="@string/apply_Mark"
-        android:icon="@drawable/icon_multi_check"
-        app:showAsAction="always" />
-
-    <item
-        android:id="@+id/action_unSelect"
-        android:orderInCategory="100"
-        android:title="@string/unSelect"
-        android:icon="@mipmap/icon_cancel_select"
-        app:showAsAction="always" />
+<!--    <item-->
+<!--        android:id="@+id/action_MarkUpMulti"-->
+<!--        android:orderInCategory="100"-->
+<!--        android:title="@string/apply_Mark"-->
+<!--        android:icon="@drawable/icon_multi_check"-->
+<!--        app:showAsAction="always" />-->
 
 </menu>
