--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,19 +20,22 @@
         <item name="android:fadeScrollbars">true</item>
         <item name="android:scrollbarThumbVertical">@drawable/scrollbar_vertical_thumb</item>
         <item name="android:scrollbarTrackVertical">@drawable/scrollbar_vertical_track</item>
-        <item name="android:scrollbarSize">6dp</item>
+        <item name="android:scrollbarSize">4dp</item>
         <item name="android:scrollbarFadeDuration">2000</item>
         <item name="android:scrollbarDefaultDelayBeforeFade">1000</item>
     </style>
 
+    <style name="Theme.Custom" parent="Theme.AppCompat">
+        <item name="android:textColor">#044A04</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:paddingBottom">4dp</item>
+    </style>
+
     <style name="PreferenceScreen" parent="Theme.AppCompat">
-        <item name="android:textColor">#6fcf0f</item>
-        <item name="android:textSize">32sp</item>
-        <item name="android:textColorPrimary">#00ffff</item>
-        <item name="colorPrimary">#ff0000</item>
-        <item name="colorPrimaryDark">#ff0000</item>
-        <item name="colorAccent">#ff0000</item>
-        <item name="android:background">#333333</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:padding">4dp</item>
     </style>
 
 </resources>
