--- a/app/src/main/res/xml/set_preferences.xml
+++ b/app/src/main/res/xml/set_preferences.xml
@@ -1,5 +1,6 @@
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:and="http://schemas.android.com/apk/res/android">
+    xmlns:and="http://schemas.android.com/apk/res/android"
+    xmlns:android="urn:oasis:names:tc:xliff:document:1.2">
 
     <PreferenceCategory app:title="@string/messages_header"
         >
@@ -10,27 +11,40 @@
 <!--            app:useSimpleSummaryProvider="true" />-->
 
         <ListPreference
-            app:defaultValue="radius"
+            app:defaultValue="123"
             app:entries="@array/radius_values"
             app:entryValues="@array/radius_values"
             app:key="radius"
             app:icon="@mipmap/radius"
+            app:iconSpaceReserved="true"
             app:title="@string/radius_title"
-            app:useSimpleSummaryProvider="true" />
+            app:summary="radius in meters" />
 
         <ListPreference
-            app:defaultValue="sort"
+            android:id="@+id/sort"
+            app:defaultValue="none"
             app:entries="@array/sort_values"
             app:entryValues="@array/sort_values"
             app:key="sort"
             app:icon="@mipmap/sort"
-            app:title="@string/sort_title"
-            app:useSimpleSummaryProvider="true" />
+            app:summary="how to list up nearby place list"
+            app:title="@string/sort_title" />
 
         <SwitchPreferenceCompat
             app:key="autoLoad"
+            and:defaultValue="false"
             app:icon="@mipmap/auto_list"
+            app:summary="If on, place list will be automatically accessed when the photo is selected"
             app:title="@string/auto_title" />
+
+        <ListPreference
+            app:defaultValue="span"
+            app:entries="@array/span_values"
+            app:entryValues="@array/span_values"
+            app:key="span"
+            app:icon="@mipmap/span"
+            app:summary="this and that"
+            app:title="@string/span_title" />
 
     </PreferenceCategory>
 
