--- a/app/src/main/res/layout/activity_markup.xml
+++ b/app/src/main/res/layout/activity_markup.xml
@@ -5,7 +5,6 @@
     tools:ignore="LabelFor"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/markupPlace"
     android:background="#aaaaaa">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -93,13 +92,25 @@
         />
 
     <ImageView
+        android:id="@+id/pasteInfo"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="16dp"
+        android:src="@mipmap/paste_text"
+        android:contentDescription="@string/photo"
+        app:layout_constraintTop_toBottomOf="@id/getLocation"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/placeAddress"
+        />
+
+    <ImageView
         android:id="@+id/add_mark"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="16dp"
         android:src="@mipmap/add_mark"
         android:contentDescription="@string/photo"
-        app:layout_constraintTop_toBottomOf="@id/getLocation"
+        app:layout_constraintTop_toBottomOf="@id/pasteInfo"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@id/placeAddress"
         />
@@ -128,17 +139,24 @@
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_editor_absoluteX="8dp" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <ImageView
         android:id="@+id/rotate"
-        android:layout_width="52dp"
-        android:layout_height="52dp"
-        android:scaleType="centerCrop"
-        android:layout_gravity="bottom|start"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginBottom="20dp"
-        android:background="@color/colorPrimary"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:srcCompat="@drawable/icon_rotate" />
+        app:srcCompat="@mipmap/rotate" />
+
+    <ImageView
+        android:id="@+id/rotate_save"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="88dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:srcCompat="@mipmap/save_rotate" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
