--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,12 +25,19 @@
         <item name="android:scrollbarDefaultDelayBeforeFade">1000</item>
     </style>
 
-    <style name="Theme.Custom" parent="Theme.AppCompat">
-        <item name="android:textColor">#044A04</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">18sp</item>
-        <item name="android:paddingTop">4dp</item>
-        <item name="android:paddingBottom">4dp</item>
-    </style>
+    <style name="MyPreference" parent="Theme.AppCompat">
+        <item name="title">설정</item>
+        <item name="titleTextColor">#1EC2F4</item>  // title bar text color
+        <item name="colorPrimary">#77A5D3</item>    // title bar background color
+        <item name="android:colorBackground">#77A5D3</item> // setting screen background
 
+        <item name="colorAccent">#FFFF00</item> // category, switch button color
+
+        <item name="android:textColor">#045E04</item>   // key title color
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="colorSecondary">#E4C5C4</item>    //
+        <item name="colorPrimarySurface">#5C0606</item>
+        // summary color variable not known
+    </style>
 </resources>
