--- a/app/src/main/res/layout/activity_photo.xml
+++ b/app/src/main/res/layout/activity_photo.xml
@@ -7,31 +7,56 @@
     android:layout_height="match_parent"
     android:background="#aaaaaa">
 
-    <TextView
-        android:id="@+id/photoName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:text="aaa.jpg"
-        android:textSize="12sp"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-
     <ImageView
         android:id="@+id/photoImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@mipmap/black_photo"
         android:contentDescription="@string/photo"
-        app:layout_constraintTop_toBottomOf="@id/photoName"
+        app:layout_constraintTop_toTopOf="parent"
         />
 
     <ImageView
-        android:id="@+id/sendImage"
+        android:id="@+id/checkState"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_margin="4dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:src="@mipmap/unchecked"
+        />
+
+    <TextView
+        android:id="@+id/photoName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:text="aaa.jpg"
+        android:textColor="#00ff00"
+        android:textSize="28sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/checkState"
+        />
+
+    <ImageView
+        android:id="@+id/goLeft"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:src="@mipmap/airplane_red"
+        android:src="@mipmap/arrow_prev"
         android:contentDescription="@string/photo"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_margin="8dp"
+        />
+
+    <ImageView
+        android:id="@+id/goRight"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:src="@mipmap/arrow_next"
+        android:contentDescription="@string/photo"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_margin="8dp"
