--- a/app/src/main/res/layout/activity_photos.xml
+++ b/app/src/main/res/layout/activity_photos.xml
@@ -15,9 +15,9 @@
         app:spanCount="2"
         android:choiceMode="singleChoice"
         android:scrollbars="vertical"
-        android:scrollbarThumbVertical="@color/recycleView"
-        android:scrollbarSize="8dp"
+        android:scrollbarSize="6dp"
         android:scrollbarStyle="outsideInset"
+        style="@style/scrollbar_shape_photos"
         >
     </androidx.recyclerview.widget.RecyclerView>
 
