--- a/app/src/main/res/layout/event_folder_line.xml
+++ b/app/src/main/res/layout/event_folder_line.xml
@@ -9,9 +9,9 @@
 
     <TextView
         android:id="@+id/eventTime"
-        android:gravity="center|left"
+        android:gravity="center"
         android:layout_margin="4dp"
-        android:textSize="24dp"
+        android:textSize="20sp"
         android:textColor="#000000"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
