--- a/app/src/main/res/layout/photos_item.xml
+++ b/app/src/main/res/layout/photos_item.xml
@@ -13,12 +13,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:contentDescription="@string/todo" />
+
     <ImageView
-        android:id="@+id/select"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:id="@+id/checked"
+        android:layout_width="12dp"
+        android:layout_height="12dp"
         android:layout_margin="4dp"
         android:src="@mipmap/unchecked"
+        />
+
+    <TextView
+        android:id="@+id/photoName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:textColor="#094355"
+        android:layout_toEndOf="@+id/checked"
         />
 
 </RelativeLayout>
