--- a/app/src/main/res/layout/folders_item.xml
+++ b/app/src/main/res/layout/folders_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="180dp"
+    android:layout_height="230dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/border_folder"
     android:orientation="vertical"
@@ -20,12 +20,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="100dp"
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/photoImage1"
             android:layout_gravity="center"
             android:layout_margin="2dp"
+            android:paddingBottom="16dp"
             android:layout_width="0dp"
             android:layout_weight="4"
             android:layout_height="wrap_content"
@@ -36,6 +37,7 @@
             android:id="@+id/photoImage2"
             android:layout_gravity="center"
             android:layout_margin="2dp"
+            android:paddingTop="16dp"
             android:layout_width="0dp"
             android:layout_weight="4"
             android:layout_height="wrap_content"
@@ -44,12 +46,13 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="100dp"
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/photoImage3"
             android:layout_gravity="center"
             android:layout_margin="2dp"
+            android:paddingBottom="16dp"
             android:layout_width="0dp"
             android:layout_weight="4"
             android:layout_height="wrap_content"
@@ -59,6 +62,7 @@
             android:id="@+id/photoImage4"
             android:layout_gravity="center"
             android:layout_margin="2dp"
+            android:paddingTop="16dp"
             android:layout_width="0dp"
             android:layout_weight="4"
             android:layout_height="wrap_content"
