--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,7 +23,13 @@
         <item name="android:scrollbarDefaultDelayBeforeFade">1000</item>
     </style>
 
+    <style name="up_down_scroll_thumb">
+        <item name="android:scrollbarAlwaysDrawVerticalTrack">true</item>
+        <item name="android:scrollbarStyle">outsideOverlay</item>
+        <item name="android:scrollbars">vertical</item>
+        <item name="android:fadeScrollbars">false</item>
+        <item name="android:scrollbarThumbVertical">@drawable/up_down</item>
+    </style>
+
+
 </resources>
-<!--<item name="android:scrollbarThumbVertical">@drawable/scrollbar_vertical_thumb</item>-->
-<!--<item name="android:scrollbarTrackVertical">@drawable/scrollbar_vertical_track</item>-->
-<!--<item name="android:scrollbarSize">20dp</item>-->
