--- a/app/src/main/res/layout/folders_item.xml
+++ b/app/src/main/res/layout/folders_item.xml
@@ -16,57 +16,17 @@
         android:textColor="#000000"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:ignore="RtlHardcoded" />
-
-    <LinearLayout
+        tools:ignore="RtlHardcoded"
+        android:orientation="horizontal"
+        />
+    <ImageView
+        android:id="@+id/photoImage1"
+        android:layout_gravity="center"
+        android:layout_margin="2dp"
+        android:paddingBottom="16dp"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:orientation="horizontal">
-        <ImageView
-            android:id="@+id/photoImage1"
-            android:layout_gravity="center"
-            android:layout_margin="2dp"
-            android:paddingBottom="16dp"
-            android:layout_width="0dp"
-            android:layout_weight="4"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/todo"
-            />
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/todo"
+        />
 
-        <ImageView
-            android:id="@+id/photoImage2"
-            android:layout_gravity="center"
-            android:layout_margin="2dp"
-            android:paddingTop="16dp"
-            android:layout_width="0dp"
-            android:layout_weight="4"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/todo"
-            />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:orientation="horizontal">
-        <ImageView
-            android:id="@+id/photoImage3"
-            android:layout_gravity="center"
-            android:layout_margin="2dp"
-            android:paddingBottom="16dp"
-            android:layout_width="0dp"
-            android:layout_weight="4"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/todo"
-            />
-        <ImageView
-            android:id="@+id/photoImage4"
-            android:layout_gravity="center"
-            android:layout_margin="2dp"
-            android:paddingTop="16dp"
-            android:layout_width="0dp"
-            android:layout_weight="4"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/todo"
-            />
-    </LinearLayout>
 </LinearLayout>
