Prepare event folder 6 images into one imaged array for better performance and keep in Room db

--- a/app/src/main/res/layout/activity_photo.xml
+++ b/app/src/main/res/layout/activity_photo.xml
@@ -32,8 +32,8 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:text="aaa.jpg"
-        android:textColor="#00ff00"
-        android:textSize="28sp"
+        android:textColor="#447744"
+        android:textSize="20sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@id/checkState"
         />
