Prepare event folder 6 images into one imaged array for better performance and keep in Room db

--- a/app/src/main/res/menu/photos_menu.xml
+++ b/app/src/main/res/menu/photos_menu.xml
@@ -7,7 +7,7 @@
         android:id="@+id/action_sending"
         android:orderInCategory="100"
         android:title="@string/setting"
-        android:icon="@mipmap/airplane_red"
+        android:icon="@mipmap/airplane_black"
         app:showAsAction="always" />
 
 </menu>
