--- a/app/src/main/res/layout/folders_item.xml
+++ b/app/src/main/res/layout/folders_item.xml
@@ -6,6 +6,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/border_folder"
     android:orientation="vertical"
+    android:padding="8dp"
+    android:id="@+id/folderLayout"
     android:layout_margin="2dp">
 
     <TextView
