--- a/app/src/main/res/layout/activity_snaps_list.xml
+++ b/app/src/main/res/layout/activity_snaps_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#59A7F4"
     tools:context=".SnapSelectActivity">
 
     <androidx.recyclerview.widget.RecyclerView
