--- a/app/src/main/res/layout/snap_item.xml
+++ b/app/src/main/res/layout/snap_item.xml
@@ -30,7 +30,8 @@
         <ImageView
             android:id="@+id/send"
             android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_weight="2"
+            android:layout_gravity="center"
             android:layout_height="match_parent"
             android:src="@mipmap/airplane_red" />
 
