--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,19 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EADBB9"
     android:id="@+id/main_layout"
     tools:context=".MainActivity">
 
+    <ProgressBar
+        android:id="@+id/progress"
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:progress="0" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/eventView"
+        style="@style/up_down_scroll_folder"
+        android:layout_below="@id/progress"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="4dp"
-        app:layoutManager="GridLayoutManager"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
         android:choiceMode="multipleChoice"
-        style="@style/up_down_scroll_folder"
-        >
-    </androidx.recyclerview.widget.RecyclerView>
-
+        app:layoutManager="GridLayoutManager"
+        />
 </RelativeLayout>
