--- a/app/src/main/res/layout/activity_snap_big.xml
+++ b/app/src/main/res/layout/activity_snap_big.xml
@@ -18,8 +18,8 @@
 
     <ImageView
         android:id="@+id/checkState"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_margin="4dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -27,13 +27,27 @@
         />
 
     <TextView
-        android:id="@+id/photoName"
+        android:id="@+id/photoName1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:text="aaa.jpg"
-        android:textColor="#447744"
+        android:textColor="#FDD835"
         android:textSize="20sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/checkState"
+        />
+
+    <TextView
+        android:id="@+id/photoName2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:text="aaa.jpg"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@id/checkState"
         />
