--- a/app/src/main/res/layout/one_snap_item.xml
+++ b/app/src/main/res/layout/one_snap_item.xml
@@ -22,7 +22,7 @@
         <TextView
             android:id="@+id/photoName"
             android:layout_width="0dp"
-            android:layout_weight="8"
+            android:layout_weight="10"
             android:layout_height="match_parent"
             android:layout_marginStart="16sp"
             android:textSize="16sp"
@@ -39,9 +39,9 @@
     </LinearLayout>
     <ImageView
         android:id="@+id/photosImage"
-        android:layout_width="0dp"
-        android:layout_weight="4"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"
         android:contentDescription="@string/todo" />
 
 </LinearLayout>
