--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,8 +36,8 @@
         <item name="android:scrollbarStyle">outsideOverlay</item>
         <item name="android:scrollbars">vertical</item>
         <item name="android:fadeScrollbars">false</item>
-        <item name="android:scrollbarThumbVertical">@drawable/up_down_folder</item>
     </style>
+<!--    <item name="android:scrollbarThumbVertical">@drawable/up_down_folder</item>-->
 
 
 </resources>
