Reset vertical scroll bar

--- a/app/src/main/res/layout/activity_snaps_list.xml
+++ b/app/src/main/res/layout/activity_snaps_list.xml
@@ -8,15 +8,16 @@
     tools:context=".SnapSelectActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/sumNailView"
+        android:id="@+id/snaps_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="2dp"
         app:layoutManager="GridLayoutManager"
-        app:spanCount="2"
+        app:spanCount="1"
         android:choiceMode="singleChoice"
         android:fadeScrollbars="false"
         style="@style/up_down_scroll_thumb"
+        android:verticalScrollbarPosition="left"
         >
     </androidx.recyclerview.widget.RecyclerView>
 
