--- a/app/src/main/res/anim/flight_ani.xml
+++ b/app/src/main/res/anim/flight_ani.xml
@@ -4,5 +4,6 @@
     android:toDegrees="360"
     android:pivotX="50%"
     android:pivotY="50%"
-    android:duration="500"
+    android:duration="3000"
+    android:repeatCount="infinite"
     android:interpolator="@android:anim/accelerate_interpolator" />
